add_subdirectory(TestClient)
add_subdirectory(TestServer)

add_subdirectory(TestSharedMemoryClient)
add_subdirectory(TestSharedMemoryServer)

add_subdirectory(TestCtpApi)

add_subdirectory(TestOpenSSL)
add_subdirectory(TestSQLite)
add_subdirectory(TestMysqlConnector)
add_subdirectory(TestDbo)

add_subdirectory(TestNamedPipe)
add_subdirectory(TestNamedPipe2)

add_subdirectory(TestEpoll)
