SET(PROJECT_NAME "TestEpoll")
project(${PROJECT_NAME})
message("PROJECT_NAME:" ${PROJECT_NAME})

add_package(Src ./Src)
add_package(Platform ${CMAKE_SOURCE_DIR}/Source/Platform)
add_package(Event ${CMAKE_SOURCE_DIR}/Source/Event)
add_package(Logger ${CMAKE_SOURCE_DIR}/Source/Logger)
add_package(ThreadBase ${CMAKE_SOURCE_DIR}/Source/ThreadBase)
add_package(MemCache ${CMAKE_SOURCE_DIR}/Source/MemCache)
add_package(Utility ${CMAKE_SOURCE_DIR}/Source/Utility)

add_package(SocketInit ${CMAKE_SOURCE_DIR}/Source/SocketInit)
add_package(TcpBase ${CMAKE_SOURCE_DIR}/Source/Tcp/TcpBase)
add_package(TcpEpoll ${CMAKE_SOURCE_DIR}/Source/Tcp/TcpEpoll)

if(CMAKE_SYSTEM_NAME MATCHES "Linux")
	add_executable(${PROJECT_NAME} ${all_file})
	target_link_libraries(${PROJECT_NAME} pthread)
endif()