SET(PROJECT_NAME "TestMysqlConnector")
project(${PROJECT_NAME})
message("PROJECT_NAME:" ${PROJECT_NAME})

add_package(Src ./Src)
add_package(Utility ${CMAKE_SOURCE_DIR}/Source/Utility)


include_package(MysqlConnector ${CMAKE_SOURCE_DIR}/LibHeads/MysqlConnector/8.0.31/include)
IF(CMAKE_SYSTEM_NAME MATCHES "Windows")
	if(${CMAKE_CL_64})
		link_directories(${CMAKE_SOURCE_DIR}/../Libs/MysqlConnector/8.0.31/win64)
	ELSE(${CMAKE_CL_64})
		link_directories(${CMAKE_SOURCE_DIR}/../Libs/MysqlConnector/8.0.31/win32)
	endif(${CMAKE_CL_64})
	add_executable(${PROJECT_NAME} ${all_file})
	target_link_libraries(${PROJECT_NAME} mysqlcppconn.lib libcrypto.lib libssl.lib WS2_32.LIB)
elseif(CMAKE_SYSTEM_NAME MATCHES "Linux")
	add_executable(${PROJECT_NAME} ${all_file})
	target_link_libraries(${PROJECT_NAME} mysqlcppconn crypto ssl pthread dl)
endif()